# distribuicao-renovavel

./: Makefile  README.md  pyproject.toml  requirements.txt
distribuicao_renovavel/: __init__.py  dataset.py  features.py  plots.py
distribuicao_renovavel/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/analise_exploratoria/: ANEEL.ipynb  ons_capacidade_geracao.ipynb
notebooks/entregas/: entrega_02.ipynb
