[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "distribuicao_renovavel"
version = "0.0.1"
description = "Proje\u00e7\u00e3o de demanda de energia el\u00e9trica e recomenda\u00e7\u00e3o de distribui\u00e7\u00e3o de fontes renov\u00e1veis por regi\u00e3o e subsistema de energia brasileiro."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["distribuicao_renovavel"]
force_sort_within_sections = true
